--- a/src/Componentes/Item/item.css
+++ b/src/Componentes/Item/item.css
@@ -10,5 +10,28 @@
 }
 
 .cardProducto img {
-    width: 150px;
+    border-radius: 10px;
+    width: 12rem;
+    height: 12rem;
+    margin-bottom: 1rem;
 }
+
+.contador{
+    padding: 3px;
+    display: block;
+}
+
+.item-info{
+    background-color: #636161;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    padding: 2px;
+    margin-top: 2px;
+}
+
+.item-info:hover{
+    background-color: white;
+    color: #636161;
+}
+
